tests/errors/conflicting-use.expect
---CODE---
1
---STDERR---
error: Cannot prove constraint 1 >= 2
  ┌─ tests/errors/conflicting-use.fil:9:3
  │
8 │   m0 := M<G>(10, 20);
  │   ------------------- Invoke provides binding M.G=G
9 │   m1 := M<G+1>(30, 40);
  │   ^^^^^^^^^^^^^^^^^^^^^ Conflicting invoke. Invoke provides binding M.G=G+1
  │
  ┌─ ./primitives/sequential.fil:3:14
  │
3 │ comp Mult[W]<G: 2>(
  │              ---- Delay for G specifies that invokes must be 2 cycles apart

